<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDetail"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/cvAvatarDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp">

        <ImageView
                android:id="@+id/ivAvatarDetail"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/tvNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_fullname"
            style="@style/Poppins.SemiBold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/cvAvatarDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/tvUsernameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            style="@style/Poppins"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tvNameDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:id="@+id/llFollowersDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tvUsernameDetail"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/llFollowingDetail">
        <TextView
                android:id="@+id/tvFollowersDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_200"
                style="@style/Poppins"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                style="@style/Poppins.SemiBold"
                android:textSize="12sp"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/llFollowingDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tvUsernameDetail"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/llFollowersDetail">
        <TextView
                android:id="@+id/tvFollowingDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_200"
                style="@style/Poppins"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                style="@style/Poppins.SemiBold"
                android:textSize="12sp"
        />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tab_layout"
            app:layout_constraintTop_toBottomOf="@+id/llFollowersDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tlDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:indicatorColor="@color/dark_purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
    </ProgressBar>

    <RelativeLayout
            android:id="@+id/rlError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
    >
        <ImageView
                android:id="@+id/ivError"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_error_24"
                android:layout_centerHorizontal="true"
                app:tint="@color/error"/>

        <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_error"
                android:layout_below="@id/ivError"
                android:layout_marginTop="8dp"
                style="@style/Poppins.SemiBold"
                android:visibility="visible"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite_button"
        android:src="@drawable/ic_favorite_border_24"
        android:tint="@color/error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>