<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.search.SearchBar>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/search_hint"
        app:layout_anchor="@id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/github_user_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.026"/>

    <RelativeLayout
        android:id="@+id/rlEmptySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_search_off_24"
            android:layout_centerHorizontal="true"
            app:tint="@color/error"/>

        <TextView
            android:id="@+id/tvEmptySearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_search"
            android:layout_below="@id/ivSearch"
            android:layout_marginTop="8dp"
            style="@style/Poppins.SemiBold"
            android:visibility="visible"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <ImageView
            android:id="@+id/ivError"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_error_24"
            android:layout_centerHorizontal="true"
            app:tint="@color/error"/>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_error"
            android:layout_below="@id/ivError"
            android:layout_marginTop="8dp"
            style="@style/Poppins.SemiBold"
            android:visibility="visible"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:indicatorColor="@color/dark_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>